# alacrity

./: .gitignore  CLAUDE.md  README.md  TODO.md  package.json  start-alacrity.sh
.github/: FUNDING.yml
.github/workflows/: check.yml  release.yml
client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
notes/: gen1-transfer-pikachu.md  gen67-stream-tuning.md  identity-pokedex-pickup.md  pickup-gen3plus-parsers.md  pickup-save-placement-v2.md  save-timeline-pickup.md  save-timeline-regression.md  save-timeline-spec.md  shiny-hunt-guide.md  streaming-architecture.md
scripts/: _resize-pngs.ts  build-bsdtar.sh  build-hunters.sh  build-sidecar.sh  clean-junk-grunts.ts  fetch-alpha-list.ts  fetch-sprites.ts  freeze-manifest.ts  hunt-manifest.json  monitor_hunters.sh  purge-bulbapedia-grunts.ts  shiny_hunter_core.c  shiny_hunter_crystal_stationary  shiny_hunter_crystal_stationary.c  shiny_hunter_egg.c  shiny_hunter_wild.c
scripts/lua/: debug_gen1.lua  debug_gen2_egg.lua  find_coords.lua  find_daycare.lua  record_path.lua  shiny_check_v9.lua  shiny_hunt_gen1.lua  shiny_hunt_gen2.lua  shiny_hunt_gen2_egg.lua  shiny_hunt_gen2_wild.lua
server/: package-lock.json  package.json  tsconfig.json
server/scripts/: build-sidecar.ts
server/src/: backfillHatchCounters.ts  db.ts  events.ts  index.ts  migrate.ts  paths.ts  schema.sql  seed-moves-run.ts  seed-moves.ts  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+441 files in other folders)
